# smart-cockpit

./: docker-compose.yml  package.json
backend/: .env  .env.example  .gitignore  main.py  pyproject.toml
backend/ai/: face_recognition.py  fatigue_detection.py  obstacle_detection.py
backend/api/: alerts.py  amap.py  auth.py  face.py  faces.py  fatigue.py  obstacle.py  sensor.py  user.py  vehicles.py  weather.py
backend/config/: settings.py
backend/core/: security.py
backend/db/: database.py
backend/models/: __init__.py  alert.py  face.py  face_library.py  user.py  vehicle.py
backend/scripts/: seed.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/api/: alerts.ts  auth.ts  faces.ts  request.ts  test.py  user.ts  vehicles.ts
frontend/src/components/cockpit/: CockpitMap.vue  SensorCard.vue  WeatherCard.vue
frontend/src/composables/: useAmapLoader.ts  useSensor.ts
frontend/src/layouts/: AdminLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: driver.ts  user.ts
frontend/src/styles/: cockpit.css
frontend/src/utils/: constants.ts  format.ts
frontend/src/views/: AlertListView.vue  DashboardView.vue  FaceListView.vue  LoginVIEW.vue  UserListView.vue  VehicleListView.vue
frontend/src/views/cockpit/: CockpitLayout.vue  FaceLoginView.vue
frontend/src/views/cockpit/layout-parts/: BottomTabBar.vue  ButtonTabBar.vue
frontend/src/views/cockpit/tabs/: FatigueTab.vue  HomeTab.vue  ObstacleTab.vue  PlaceholderTab.vue
