[project]
name = "smart-cockpit-yyx-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "pydantic-settings>=2.6.0",
    "pymysql>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "sqlmodel>=0.0.22",
]
